# Footnote

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  nginx.conf  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  clean_db.py  main.py  pyproject.toml  requirements.txt
backend/app/: celery_app.py  config.py  database.py  database_celery.py  enums.py  utils.py  worker.py
backend/app/db/: __init__.py  celery.py  session.py
backend/app/middleware/: __init__.py  rate_limit.py  size_limit.py
backend/app/models/: __init__.py  chunk.py  conversation.py  db_models.py  failed_task.py  file.py  folder.py  indexing_job.py  message.py  session.py  user.py
backend/app/routes/: auth.py  chat.py  folders.py  health.py
backend/app/services/: agent_rag.py  agent_tools.py  anthropic.py  auth.py  chat_rag.py  chunking.py  drive.py  embedding.py  extraction.py  folder_sync.py  generation.py  hybrid_search.py  mistral.py  posthog.py  rag.py  retrieval.py
backend/app/services/chat/: __init__.py  agent.py  rag.py
backend/app/services/extraction/: __init__.py  google_docs.py  models.py  pdf.py  service.py
backend/app/services/file/: __init__.py  chunking.py
backend/app/services/file/extraction/: __init__.py  google_docs.py  image.py  pdf.py  service.py  spreadsheet.py
backend/app/services/tools/: __init__.py  get_file.py  get_file_chunks.py  search_folder.py
backend/app/tasks/: base.py  exceptions.py  indexing.py
backend/app/utils/: __init__.py  crypto.py  helpers.py
backend/database/migrations/: 001_add_hybrid_search.sql  002_add_user_id_to_chunks.sql  003_add_failed_tasks.sql  004_add_folder_unique_constraint.sql
backend/eval/: README.md  dataset.json  report.html  run_eval.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_extraction.py  test_folders.py  test_routes.py  test_worker.py
backend/tests/integration/: test_auth.py  test_chat.py  test_folders.py  test_routes.py  test_worker.py
backend/tests/unit/: test_agent_rag.py  test_agent_tools.py  test_chat_rag.py  test_chunking.py  test_citation_parsing.py  test_contextual_retrieval.py  test_crypto.py  test_embedding.py  test_enums.py  test_folder_sync.py  test_hybrid_search.py  test_image_indexing.py  test_image_vision.py  test_utils.py  test_validators.py
backend/tests/unit/middleware/: test_size_limit.py
backend/tests/unit/models/: test_failed_task.py
backend/tests/unit/services/: test_auth.py
backend/tests/unit/services/chat/: test_agent.py  test_image_vision.py  test_rag.py
backend/tests/unit/services/extraction/: test_extraction.py
backend/tests/unit/services/file/: __init__.py  test_chunking.py  test_contextual_retrieval.py  (+1 more)
backend/tests/unit/tasks/: test_dlq.py  test_indexing.py
(+104 files in other folders)
