[project]
name = "footnote-backend"
version = "0.1.0"
description = "Footnote - RAG backend for Google Drive"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    # Database
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.36",
    "pgvector==0.3.6",
    # Google APIs
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.2.1",
    "google-api-python-client==2.159.0",
    # HTTP client
    "httpx==0.28.1",
    # AI/ML
    "anthropic==0.42.0",
    "openai>=1.0.0",
    "mistralai>=1.0.0",
    "tiktoken==0.8.0",
    # Utils
    "python-dotenv==1.0.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "jiter>=0.8.0",  # Explicit dep for pydantic (fixes cross-platform builds)
    # HTML parsing
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    # Security
    "cryptography==44.0.0",
    "python-jose[cryptography]==3.3.0",
    # Retry logic
    "tenacity>=8.0.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # Depends() in function defaults is standard FastAPI pattern
    "E402",   # module level imports not at top (common for env setup)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
# Start permissive, tighten later
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.services.chat.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.routes.chat"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.routes.auth"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.services.anthropic"
ignore_errors = true


[[tool.mypy.overrides]]
module = "app.services.drive"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.services.hybrid_search"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.services.folder_sync"
ignore_errors = true
